src/objects/Discount_Item__c.object
<CustomObject>
    <fields>
        <fullName>Adj_Type__c</fullName>
        <label>Adj Type</label>
        <picklist>
            <picklistValues>
                <fullName>Percent</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apply_To__c</fullName>
        <label>Apply To</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trad IH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Id</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Based_On__c</fullName>
        <label>Based On</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trad IH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Id</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <defaultValue>&quot;USA&quot;</defaultValue>
        <description>To identify country specific discount</description>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <defaultValue>&quot;Volume Discount&quot;</defaultValue>
        <label>Discount Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Group__c</fullName>
        <description>This field should be unique across the PL. Generate a name with PL + Number</description>
        <inlineHelpText>Applicable to Group Volume.(This field should be unique across the PL. Generate a name with PL + Number)</inlineHelpText>
        <label>Discount Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_ID__c</fullName>
        <formula>CASESAFEID( Discount__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Volume</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GroupVolume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GroupVolumeRBC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <referenceTo>Discount__c</referenceTo>
        <relationshipLabel>Discount Items</relationshipLabel>
        <relationshipName>Discount_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Adj_Amount__c</fullName>
        <label>Max Adj Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Qty__c</fullName>
        <label>Max Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <label>Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Units</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Adj_Amount__c</fullName>
        <label>Min Adj Amount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Qty__c</fullName>
        <label>Min Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products_Applied_On__c</fullName>
        <description>Applicable only for GroupVolume</description>
        <inlineHelpText>Applicable only for GroupVolume</inlineHelpText>
        <label>Products Applied On</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products_Based_On__c</fullName>
        <description>Applicable only for GroupVolume.</description>
        <inlineHelpText>Applicable only for GroupVolume.</inlineHelpText>
        <label>Products Based On</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tier_Group_SubType__c</fullName>
        <label>Tier Group SubType</label>
        <picklist>
            <picklistValues>
                <fullName>Price Protected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>API Applied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tier_Group_Type__c</fullName>
        <label>Tier Group Type</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Chemistry</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Immunoassay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Discount Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Adj_Type__c</columns>
        <columns>Apply_To__c</columns>
        <columns>Based_On__c</columns>
        <columns>Discount__c</columns>
        <columns>Discount_Code__c</columns>
        <columns>Discount_Group__c</columns>
        <columns>Discount_ID__c</columns>
        <columns>Discount_Type__c</columns>
        <columns>Min_Adj_Amount__c</columns>
        <columns>Max_Adj_Amount__c</columns>
        <columns>Min_Qty__c</columns>
        <columns>Max_Qty__c</columns>
        <columns>Measure__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Discount Item Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>